# first-llm-classifier

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  download.py  notebook.ipynb  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: docs.yaml
_build/doctrees/: bulk-prompts.doctree  environment.pickle  evaluate.doctree  huggingface.doctree  improve.doctree  index.doctree  our-mission.doctree  prompting-with-python.doctree  structured-responses.doctree  visual-studio-code.doctree
_build/html/: .buildinfo  bulk-prompts.html  evaluate.html  genindex.html  huggingface.html  improve.html  index.html  objects.inv  our-mission.html  prompting-with-python.html  search.html  searchindex.js  structured-responses.html  visual-studio-code.html
_build/html/_sources/: evaluate.md.txt  our-mission.md.txt  structured-responses.md.txt
_build/html/_static/: palewire.css
_notebooks/: Form460ScheduleESubItem.csv  classify.ipynb  download.ipynb  huggingface.ipynb
docs/: bulk-prompts.md  conf.py  evaluate.md  github-codespaces.md  google-colab.md  huggingface.md  improve.md  index.md  jupyter-desktop.md  llm-wtf.md  our-mission.md  payees.md  prompting-with-python.md  structured-responses.md  tips.md  visual-studio-code.md
tests/: notebook.ipynb  test_docs_python.py
