[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "first-llm-classifier"
description = "Learn how journalists use large-language models to organize and analyze massive datasets"
version = "1.0.0"
requires-python = "==3.13.*"
dependencies = [
    # Docs stuff
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "myst-parser",
    "sphinx-palewire-theme",
    # Tutorial dependencies
    "bln",
    "pandas",
    "altair",
    "jupyterlab",
    "geopandas",
    "huggingface-hub",
    # Dev stuff
    "pre-commit",
    "rich>=14.3.3",
    "pydantic>=2.12.5",
    "ipywidgets>=8.1.8",
    "tabulate>=0.9.0",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "stamina>=25.2.0",
    "pytest",
]

[project.scripts]
download = "download:main"

[tool.setuptools]
packages = ["docs"]
py-modules = ["download"]
