[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "first-llm-classifier"
description = "Learn how journalists use large-language models to organize and analyze massive datasets"
version = "1.0.0"
requires-python = "==3.13.*"
dependencies = [
    # Docs stuff
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "myst-parser",
    "sphinx-palewire-theme",
    # Tutorial dependencies
    "bln",
    "jupyterlab",
    "pandas",
    "huggingface-hub",
    "matplotlib",
    "pydantic",
    "scikit-learn",
    "stamina",
    "tqdm",
    # Dev stuff
    "pre-commit",
    "ipykernel",
    "ipywidgets",
    "tabulate",
    "pytest",
]

[project.scripts]
download = "download:main"

[tool.setuptools]
packages = ["docs"]
py-modules = ["download"]
