[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "first-llm-classifier"
version = "1.0.0"
description = "Learn how journalists use large-language models to organize and analyze massive datasets"
readme = "README.md"
requires-python = "==3.13.*"
license = "MIT"
dependencies = [
    "bln",
    "jupyterlab",
    "pandas",
    "huggingface-hub",
    "matplotlib",
    "pydantic",
    "scikit-learn",
    "stamina",
    "tqdm",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "myst-parser",
    "sphinx-palewire-theme",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ipykernel",
    "ipywidgets",
    "tabulate",
    "pytest",
]

[tool.setuptools]
packages = []
py-modules = [
    "download",
]
